test/chainsaw/unmanaged_route_tls/01-create-unmanaged-route-tls.yaml
apiVersion: quay.redhat.com/v1
kind: QuayRegistry
metadata:
  name: route-tls-b
spec:
  configBundleSecret: route-tls-config-b
  components:
  - kind: quay
    managed: true
  - kind: clair
    managed: true
  - kind: clairpostgres
    managed: true
  - kind: postgres
    managed: true
  - kind: redis
    managed: true
  - kind: mirror
    managed: true
  - kind: horizontalpodautoscaler
    managed: false
  - kind: objectstorage
    managed: true
  - kind: route
    managed: false
  - kind: monitoring
    managed: true
  - kind: tls
    managed: false
