test/chainsaw/unmanaged_route_tls/00-assert-status.yaml
apiVersion: quay.redhat.com/v1
kind: QuayRegistry
metadata:
  name: route-tls-a
status:
  conditions:
  - type: ComponentHPAReady
    status: "True"
  - type: ComponentRouteReady
    status: "True"
  - type: ComponentMonitoringReady
    status: "True"
  - type: ComponentCacheReady
    status: "True"
  - type: ComponentPostgresReady
    status: "True"
  - type: ComponentObjectStorageReady
    status: "True"
  - type: ComponentClairReady
    status: "True"
  - type: ComponentClairPostgresReady
    status: "True"
  - type: ComponentTLSReady
    status: "True"
  - type: ComponentRedisReady
    status: "True"
  - type: ComponentQuayReady
    status: "True"
  - type: ComponentMirrorReady
    status: "True"
  - type: Available
    status: "True"
  - type: ComponentsCreated
    status: "True"
  - type: RolloutBlocked
    status: "False"
